# Cherry-Computer---KurOS

./: CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  setup.py
docs/: DESIGN.md
docs/workflows/: ci.yml.example  publish.yml.example
src/kuros/: app.py
